[project]
name = "meteor"
version = "0.1.1"
description = "An implementation of the METEOR metric for machine translation"
authors = [{name = "Wolfgang Seeker"}]
requires-python = ">=3.11,<3.12"
dependencies = [
    "nltk>=3.9,<4.0",
    "mip==1.16rc0",
    "typer>=0.12,<1.0",
]

[project.scripts]
meteor = "meteor.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-randomly = "^3.15"

mypy = "^1.13"
coverage = "^7.6"
ruff = "^0.8"

# check hook versions in .pre-commit-config.yaml and update if outdated
pre-commit = "^4.0"

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.ruff.lint.isort]
force-single-line = true
known-third-party = ["mip", "nltk", "pytest", "typer"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
